k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity-system
  labels:
    app: fcg-identity
    environment: production
