k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-service
  namespace: production
spec:
  selector:
    app: tech-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: tech-challenge-app
  type: ClusterIP
